[package]
name = "unienv"
version = "0.1.0"
edition = "2021"
description = "Auxillary program for cli-based unity3d execution"
license = "MIT"


[dependencies]
clap = { version = "4.5.20", features = ["cargo", "derive"] }
confy = "0.6.1"
serde = { version = "1.0.217", features = ["derive"] }
serde_yml = "0.0.12"
