[package]
name = "unienv"
version = "0.2.1"
edition = "2021"
description = "Auxillary program for cli-based unity3d execution"
license = "MIT"


[dependencies]
clap = { version = "4.5.52", features = ["cargo", "derive"] }
confy = "2.0.0"
serde = { version = "1.0.228", features = ["derive"] }
serde_yml = "0.0.12"
